--- a/blocked_host.html
+++ b/blocked_host.html
@@ -26,7 +26,7 @@
 <div class="jumbotron">
     <div class="container">
         <h1>Blocked</h1>
-        <p>You have been blocked from accessing this site</p>
+        <p>You have been blocked from accessing this site by the proxy server</p>
     </div>
 </div>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
